[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/JoyPadColorPicker.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CCPMainDisplay.gd" type="Script" id=2]
[ext_resource path="res://JoyPadColorPickerSprites/SlimColorWheelwOutlineFit.png" type="Texture" id=3]
[ext_resource path="res://Scripts/CCPColorWheel.gd" type="Script" id=4]
[ext_resource path="res://Scripts/CCPSample.gd" type="Script" id=5]
[ext_resource path="res://JoyPadColorPickerSprites/Selector.png" type="Texture" id=6]
[ext_resource path="res://PresetColorTheme.tres" type="Theme" id=7]
[ext_resource path="res://Scripts/PresetColor.gd" type="Script" id=8]
[ext_resource path="res://JoyPadColorPickerSprites/PresetAdd.png" type="Texture" id=9]
[ext_resource path="res://JoyPadColorPickerSprites/PresetAddPressed.png" type="Texture" id=10]
[ext_resource path="res://JoyPadColorPickerSprites/PresetAddFocus.png" type="Texture" id=11]
[ext_resource path="res://Scripts/AddButton.gd" type="Script" id=12]

[sub_resource type="Theme" id=1]

[node name="JoyPadColorPicker" type="PanelContainer"]
margin_right = 536.0
margin_bottom = 526.0
script = ExtResource( 1 )
color = Color( 1, 0, 0, 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 529.0
margin_bottom = 519.0

[node name="Main" type="HBoxContainer" parent="VBox"]
margin_right = 522.0
margin_bottom = 468.0
focus_neighbour_bottom = NodePath("../PresetBar/AddButton")
focus_mode = 2
script = ExtResource( 2 )

[node name="Display" type="CenterContainer" parent="VBox/Main"]
margin_right = 468.0
margin_bottom = 468.0

[node name="ColorWheel" type="TextureRect" parent="VBox/Main/Display"]
margin_right = 468.0
margin_bottom = 468.0
mouse_filter = 0
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Sample" type="ColorRect" parent="VBox/Main/Display"]
margin_left = 106.0
margin_top = 106.0
margin_right = 361.0
margin_bottom = 361.0
rect_min_size = Vector2( 255, 255 )
script = ExtResource( 5 )

[node name="SaturationBar" type="ColorRect" parent="VBox/Main/Display/Sample"]
margin_left = 255.0
margin_right = 257.0
margin_bottom = 255.0

[node name="ValueBar" type="ColorRect" parent="VBox/Main/Display/Sample"]
margin_right = 255.0
margin_bottom = 2.0

[node name="Preview" type="ColorRect" parent="VBox/Main"]
margin_left = 472.0
margin_right = 522.0
margin_bottom = 468.0
rect_min_size = Vector2( 50, 468 )
color = Color( 1, 0, 0, 1 )

[node name="Selector" type="Sprite" parent="VBox/Main"]
position = Vector2( -7, -7 )
scale = Vector2( 0.843356, 0.843356 )
z_index = 1
texture = ExtResource( 6 )

[node name="PresetBar" type="HBoxContainer" parent="VBox"]
editor/display_folded = true
margin_top = 472.0
margin_right = 522.0
margin_bottom = 512.0

[node name="0" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="1" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="2" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="3" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="4" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="5" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="6" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="7" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="8" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="9" type="Button" parent="VBox/PresetBar"]
visible = false
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 40 )
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="AddButton" type="TextureButton" parent="VBox/PresetBar"]
margin_right = 50.0
margin_bottom = 40.0
theme = SubResource( 1 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
script = ExtResource( 12 )
[connection signal="lose_focus" from="VBox/Main" to="." method="_on_lose_focus"]
[connection signal="main_color_changed" from="VBox/Main" to="." method="_on_Main_main_color_changed"]
[connection signal="new_preset_selected" from="VBox/Main" to="." method="_on_Main_new_preset_selected"]
[connection signal="wheel_mouse_input" from="VBox/Main/Display/ColorWheel" to="VBox/Main" method="_on_ColorWheel_wheel_mouse_input"]
[connection signal="mouse_input" from="VBox/Main/Display/Sample" to="VBox/Main" method="_on_Sample_mouse_input"]
[connection signal="color_pressed" from="VBox/PresetBar/0" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/0" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/1" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/1" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/2" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/2" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/3" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/3" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/4" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/4" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/5" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/5" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/6" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/6" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/7" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/7" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/8" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/8" to="." method="_on_preset_removed"]
[connection signal="color_pressed" from="VBox/PresetBar/9" to="." method="_on_preset_selected"]
[connection signal="preset_removed" from="VBox/PresetBar/9" to="." method="_on_preset_removed"]
[connection signal="lose_focus" from="VBox/PresetBar/AddButton" to="." method="_on_lose_focus"]
[connection signal="pressed" from="VBox/PresetBar/AddButton" to="." method="_on_AddButton_pressed"]
